# remote-broadcast

./: Cargo.toml  LICENSE  README.md  config.toml  protocol.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/pers/zhc/android/remotebroadcast/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pers/zhc/android/remotebroadcast/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v23/: themes.xml
android/app/src/test/java/pers/zhc/android/remotebroadcast/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
end/: Cargo.toml
receiver/: Cargo.toml
receiver/src/: cli.rs  lib.rs  main.rs
sender/: Cargo.toml
sender/src/: main.rs
server/: Cargo.toml
server/src/: cli.rs  lib.rs  main.rs  protocol.rs
